@@ -8,8 +8,6 @@ import org.dbpedia.spotlight.exceptions.InputException;
 
 import javax.ws.rs.core.Response;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
@@ -52,10 +50,8 @@ public class ServerUtils {
         }else if (!inUrl.equals("")) {
             LOG.info("Parsing URL to get main content");
             URL url = null;
-            URI uri = null;
             try {
-                uri = new URI(inUrl);
-                url = new URL(uri.toASCIIString());
+                url = new URL(inUrl);
                 textToProcess = ArticleExtractor.INSTANCE.getText(url);
             } catch (MalformedURLException e) {
                 // e.printStackTrace();
@@ -64,10 +60,6 @@ public class ServerUtils {
             } catch (BoilerpipeProcessingException e) {
                 e.printStackTrace();
                 LOG.error("Boilerpipe Cannot process the web page");
-                textToProcess = "";
-            } catch (URISyntaxException e) {
-                // e.printStackTrace();
-                LOG.error("Input URL is not valid");
                 textToProcess = "";
             }
 
